// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`World should render with 1 x 1 size and all creatures dead 1`] = `
.emotion-1 {
  display: inline-block;
  padding: 1px;
  border: 2px solid lightgray;
}

.emotion-0 {
  width: 25px;
  height: 25px;
  border: 1px solid;
  display: inline-block;
  border-radius: 5px;
  line-height: 25px;
  text-align: center;
  margin: 5px;
  vertical-align: bottom;
  background: #13d473;
}

<div
  className="emotion-1"
>
  <button
    className="emotion-0"
  />
  <br />
</div>
`;

exports[`World should render with 3 x 3 size 1`] = `
.emotion-9 {
  display: inline-block;
  padding: 1px;
  border: 2px solid lightgray;
}

.emotion-0 {
  width: 25px;
  height: 25px;
  border: 1px solid;
  display: inline-block;
  border-radius: 5px;
  line-height: 25px;
  text-align: center;
  margin: 5px;
  vertical-align: bottom;
  background: #13d473;
}

.emotion-4 {
  width: 25px;
  height: 25px;
  border: 1px solid;
  display: inline-block;
  border-radius: 5px;
  line-height: 25px;
  text-align: center;
  margin: 5px;
  vertical-align: bottom;
  background: #777777;
}

<div
  className="emotion-9"
>
  <button
    className="emotion-0"
  />
  <button
    className="emotion-0"
  />
  <button
    className="emotion-0"
  />
  <br />
  <button
    className="emotion-0"
  />
  <button
    className="emotion-4"
  />
  <button
    className="emotion-4"
  />
  <br />
  <button
    className="emotion-0"
  />
  <button
    className="emotion-0"
  />
  <button
    className="emotion-4"
  />
  <br />
</div>
`;
